[gd_scene load_steps=14 format=2]

[ext_resource path="res://Player/Assets/Both/Dress/IdleAle.png" type="Texture" id=1]
[ext_resource path="res://Player/Assets/Both/Dress/ThrowAle.png" type="Texture" id=2]
[ext_resource path="res://Player/Assets/Both/Dress/IdleYohe.png" type="Texture" id=3]
[ext_resource path="res://Player/Assets/Both/Dress/ThrowYohe.png" type="Texture" id=4]
[ext_resource path="res://UI/Transition/Transition.tscn" type="PackedScene" id=5]
[ext_resource path="res://World/Menus/Invitation.gd" type="Script" id=6]
[ext_resource path="res://World/End/ParkTileset.tres" type="TileSet" id=7]
[ext_resource path="res://World/Street/StreetTileset.tres" type="TileSet" id=8]
[ext_resource path="res://UI/AnimatedButton/AnimatedButton.tscn" type="PackedScene" id=9]
[ext_resource path="res://Fonts/yoster.ttf" type="DynamicFontData" id=10]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 2.0
} ]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 2.0
} ]

[sub_resource type="DynamicFont" id=3]
size = 72
outline_size = 1
font_data = ExtResource( 10 )

[node name="Invitation" type="Node2D"]
script = ExtResource( 6 )

[node name="Sky" type="TileMap" parent="."]
tile_set = ExtResource( 8 )
cell_size = Vector2( 16, 16 )
cell_custom_transform = Transform2D( 16, 0, 0, 16, 0, 0 )
format = 1
tile_data = PoolIntArray( -262153, 11, 0, -262152, 11, 0, -262151, 11, 0, -262150, 11, 0, -262149, 11, 0, -262148, 11, 0, -262147, 11, 0, -262146, 11, 0, -262145, 11, 0, -327680, 11, 0, -327679, 11, 0, -327678, 11, 0, -327677, 11, 0, -327676, 11, 0, -327675, 11, 0, -327674, 11, 0, -327673, 11, 0, -327672, 11, 0, -196617, 11, 0, -196616, 11, 0, -196615, 11, 0, -196614, 11, 0, -196613, 11, 0, -196612, 11, 0, -196611, 11, 0, -196610, 11, 0, -196609, 11, 0, -262144, 11, 0, -262143, 11, 0, -262142, 11, 0, -262141, 11, 0, -262140, 11, 0, -262139, 11, 0, -262138, 11, 0, -262137, 11, 0, -262136, 11, 0, -131081, 11, 0, -131080, 11, 0, -131079, 11, 0, -131078, 11, 0, -131077, 11, 0, -131076, 11, 0, -131075, 11, 0, -131074, 11, 0, -131073, 11, 0, -196608, 11, 0, -196607, 11, 0, -196606, 11, 0, -196605, 11, 0, -196604, 11, 0, -196603, 11, 0, -196602, 11, 0, -196601, 11, 0, -196600, 11, 0, -65545, 11, 0, -65544, 11, 0, -65543, 11, 0, -65542, 11, 0, -65541, 11, 0, -65540, 11, 0, -65539, 11, 0, -65538, 11, 0, -65537, 11, 0, -131072, 11, 0, -131071, 11, 0, -131070, 11, 0, -131069, 11, 0, -131068, 11, 0, -131067, 11, 0, -131066, 11, 0, -131065, 11, 0, -131064, 11, 0, -9, 11, 0, -8, 11, 0, -7, 11, 0, -6, 11, 0, -5, 11, 0, -4, 11, 0, -3, 11, 0, -2, 11, 0, -1, 11, 0, -65536, 11, 0, -65535, 11, 0, -65534, 11, 0, -65533, 11, 0, -65532, 11, 0, -65531, 11, 0, -65530, 11, 0, -65529, 11, 0, -65528, 11, 0, 65527, 11, 0, 65528, 11, 0, 65529, 11, 0, 65530, 11, 0, 65531, 11, 0, 65532, 11, 0, 65533, 11, 0, 65534, 11, 0, 65535, 11, 0, 0, 11, 0, 1, 11, 0, 2, 11, 0, 3, 11, 0, 4, 11, 0, 5, 11, 0, 6, 11, 0, 7, 11, 0, 8, 11, 0, 131063, 11, 0, 131064, 11, 0, 131065, 11, 0, 131066, 11, 0, 131067, 11, 0, 131068, 11, 0, 131069, 11, 0, 131070, 11, 0, 131071, 11, 0, 65536, 11, 0, 65537, 11, 0, 65538, 11, 0, 65539, 11, 0, 65540, 11, 0, 65541, 11, 0, 65542, 11, 0, 65543, 11, 0, 65544, 11, 0, 196599, 11, 0, 196600, 11, 0, 196601, 11, 0, 196602, 11, 0, 196603, 11, 0, 196604, 11, 0, 196605, 11, 0, 196606, 11, 0, 196607, 11, 0, 131072, 11, 0, 131073, 11, 0, 131074, 11, 0, 131075, 11, 0, 131076, 11, 0, 131077, 11, 0, 131078, 11, 0, 131079, 11, 0, 131080, 11, 0 )

[node name="Stars" type="TileMap" parent="."]
tile_set = ExtResource( 8 )
cell_size = Vector2( 16, 16 )
cell_custom_transform = Transform2D( 16, 0, 0, 16, 0, 0 )
format = 1
tile_data = PoolIntArray( -196611, 1, 0, -262143, 3, 0, -262139, 4, 0, -131077, 1, 0, -65539, 2, 0, -131070, 1, 0, -131066, 3, 0, -5, 2, 0, 131065, 1, 0, 131068, 3, 0, 65537, 1, 0, 65540, 2, 0, 65543, 1, 0 )

[node name="Grass" type="TileMap" parent="."]
tile_set = ExtResource( 7 )
cell_size = Vector2( 16, 16 )
cell_custom_transform = Transform2D( 6, 0, 0, 16, 0, 0 )
format = 1
tile_data = PoolIntArray( 196599, 1, 0, 196600, 1, 0, 196601, 1, 0, 196602, 1, 0, 196603, 1, 0, 196604, 1, 0, 196605, 1, 0, 196606, 1, 0, 196607, 1, 0, 131072, 1, 0, 131073, 1, 0, 131074, 1, 0, 131075, 1, 0, 131076, 1, 0, 131077, 1, 0, 131078, 1, 0, 131079, 1, 0, 131080, 1, 0, 262135, 0, 0, 262136, 0, 0, 262137, 0, 0, 262138, 0, 0, 262139, 0, 0, 262140, 0, 0, 262141, 0, 0, 262142, 0, 0, 262143, 0, 0, 196608, 0, 0, 196609, 0, 0, 196610, 0, 0, 196611, 0, 0, 196612, 0, 0, 196613, 0, 0, 196614, 0, 0, 196615, 0, 0, 196616, 0, 0, 327671, 0, 0, 327672, 0, 0, 327673, 0, 0, 327674, 0, 0, 327675, 0, 0, 327676, 0, 0, 327677, 0, 0, 327678, 0, 0, 327679, 0, 0, 262144, 0, 0, 262145, 0, 0, 262146, 0, 0, 262147, 0, 0, 262148, 0, 0, 262149, 0, 0, 262150, 0, 0, 262151, 0, 0, 262152, 0, 0 )

[node name="AleYYohe" type="Node2D" parent="."]
position = Vector2( -8, 47 )

[node name="Ale" type="AnimatedSprite" parent="AleYYohe"]
frames = SubResource( 1 )
playing = true
centered = false
offset = Vector2( -8, -16 )
flip_h = true

[node name="Yohe" type="AnimatedSprite" parent="AleYYohe"]
position = Vector2( 17, 1 )
frames = SubResource( 2 )
playing = true
centered = false
offset = Vector2( -8, -17 )

[node name="ConfettiAle" type="CPUParticles2D" parent="AleYYohe"]
position = Vector2( -6, -9 )
emitting = false
amount = 30
explosiveness = 1.0
lifetime_randomness = 1.0
local_coords = false
direction = Vector2( -1, -1 )
spread = 30.0
initial_velocity = 100.0
initial_velocity_random = 0.69
angular_velocity = 424.42
angular_velocity_random = 0.98
linear_accel = 71.57
linear_accel_random = 1.0
scale_amount = 5.0
scale_amount_random = 0.25
color = Color( 0.847059, 0.894118, 1, 1 )
hue_variation = 1.0
hue_variation_random = 1.0

[node name="ConfettiYohe" type="CPUParticles2D" parent="AleYYohe"]
position = Vector2( 23, -8 )
emitting = false
amount = 30
explosiveness = 1.0
lifetime_randomness = 1.0
local_coords = false
direction = Vector2( 1, -1 )
spread = 30.0
initial_velocity = 100.0
initial_velocity_random = 0.69
angular_velocity = 424.42
angular_velocity_random = 0.98
linear_accel = 71.57
linear_accel_random = 1.0
scale_amount = 5.0
scale_amount_random = 0.25
color = Color( 0.847059, 0.894118, 1, 1 )
hue_variation = 1.0
hue_variation_random = 1.0

[node name="Link" parent="." instance=ExtResource( 9 )]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -132.0
margin_top = 28.0
margin_right = 137.0
margin_bottom = 92.0
rect_scale = Vector2( 0.25, 0.25 )
focus_mode = 2
text = "Link"

[node name="Volver" parent="." instance=ExtResource( 9 )]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -35.0
margin_top = 34.0
margin_right = 234.0
margin_bottom = 98.0
rect_scale = Vector2( 0.160283, 0.160283 )
focus_mode = 2
text = "Volver"

[node name="ThanksLabel" type="Label" parent="."]
anchor_right = 1.0
margin_left = -558.0
margin_top = -100.0
margin_right = 1137.0
margin_bottom = 272.0
rect_scale = Vector2( 0.144927, 0.144927 )
rect_pivot_offset = Vector2( 512, 64 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
text = "Gracias por los momentos compartidos.
Nos hace ilusion tenerte en este dia.
Por favor accede al link para confirmar tu
asistencia a nuestra boda.
"
align = 1
valign = 1

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 2, 22 )
offset = Vector2( 0, -23 )
current = true
zoom = Vector2( 0.25, 0.25 )
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = true
drag_margin_left = 0.0
drag_margin_top = 0.5
drag_margin_right = 0.0

[node name="Transition" parent="Camera2D" instance=ExtResource( 5 )]
visible = false
margin_left = -520.0
margin_top = -335.0
margin_right = 504.0
margin_bottom = 265.0
mouse_filter = 2
start_closed = true

[node name="Timer" type="Timer" parent="."]
one_shot = true

[connection signal="pressed" from="Link" to="." method="_on_Link_pressed"]
[connection signal="pressed" from="Volver" to="." method="_on_Volver_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
